# docs/swagger.json
@@ -74,6 +74,37 @@
         }
       }
     },
+    "/auth/logout": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Logout a shop",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LogoutPayload"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Logout successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Logout successfully"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/refresh-token": {
       "post": {
         "tags": [
@@ -163,6 +194,17 @@
           "accessToken": {
             "type": "string"
           },
+          "refreshToken": {
+            "type": "string"
+          }
+        }
+      },
+      "LogoutPayload": {
+        "type": "object",
+        "required": [
+          "refreshToken"
+        ],
+        "properties": {
           "refreshToken": {
             "type": "string"
           }
